[package]
name = "rusqlite-mapper"
description = "Map structs from and to sqlite tables"
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
doctest = false

[workspace]
members = ["rusqlite-mapper-derive"]

[workspace.package]
version = "0.1.0"
authors = ["Robert Krahn <robert@kra.hn>", "Remo Pas <remo.pas22@gmail.com>"]
edition = "2021"
repository = "https://github.com/rksm/rusqlite-mapper"
homepage = "https://github.com/rksm/rusqlite-mapper"
license-file = "LICENSE"
keywords = ["rusqlite", "sqlite", "from-row", "mapper"]
categories = ["database", "parsing", "data-structures"]

[workspace.dependencies]
rusqlite-mapper-derive = { path = "rusqlite-mapper-derive" }

[dependencies]
rusqlite-mapper-derive = { workspace = true }
rusqlite = "0.29.0"
serde_json = { version = "*", optional = true }
chrono = { version = "*", default-features = false, optional = true }
uuid = { version = "*", default-features = false, optional = true }
url = { version = "*", default-features = false, optional = true }

[features]
# default = ["chrono", "serde", "uuid", "url"]
chrono = ["dep:chrono"]
serde = ["dep:serde_json"]
uuid = ["dep:uuid"]
url = ["dep:url"]
